--- a/MP_yuan/Views/Home/Index.cshtml
+++ b/MP_yuan/Views/Home/Index.cshtml
@@ -2,30 +2,29 @@
     ViewBag.Title = "Home Page";
 }
 
+<style>
+    img {
+        width: 100%;
+        height: auto;
+    }
+</style>
+
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Welcome to my home page!</h1>
+    <p class="lead">Hi there, this is Yuan. I'm a student at University of North Texas. Welcome to my home page!</p>
+    <p>
+        <a href="https://www.facebook.com/yuan.yuan.3551380" class="btn btn-primary btn-lg">Go to my facebook! &raquo;</a>
+    </p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <img alt="me1" src="../../Images/1.jpg">
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <img alt="me2" src="../../Images/2.jpg">
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <img alt="me3" src="../../Images/3.jpg">
     </div>
 </div>
